8238284: [macos] Zero VM build fails due to an obvious typo

Reviewed-by: dholmes